--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="button_past_events_text">PAST</string>
     <string name="venue_spinner_text">VENUE</string>
     <string name="main_activity_event_list_text">No events to show</string>
+    <string name="eventDate">28/03 - 22</string>
+    <string name="eventVenue">Stockholm</string>
+    <string name="eventStartTime">13:00</string>
+    <string name="eventParticipants">42 / 72 players</string>
     <string-array name="venues">
         <item>Stockholm</item>
         <item>Visby</item>
